--- a/styles/hobbies.css
+++ b/styles/hobbies.css
@@ -1,6 +1,12 @@
 .hobbies{
     height: 50vh;
 }
+.hobbies__container{
+    max-width: var(--max-width);
+    margin: auto;
+    padding: 0 30px;
+}
+
 
 .hobbies__title{
     color: #464646;
@@ -11,16 +17,14 @@
 .hobbies__line{
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-   
-}
+    justify-content: space-between;
+   }
 
 .hobbies__box{
     width: 176px;
     height: 176px;
     background-color: white;
-    margin-right: 2vw;
-    margin-top: 2vw;
+    margin-bottom: 10px;
     display: flex;
     justify-content: flex-start;
     align-items: flex-end;
