--- a/styles/menu.css
+++ b/styles/menu.css
@@ -1,7 +1,10 @@
 .menu {
   height: 6vh;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  max-width: 1152px;
+  margin: auto;
+  padding: 0 30px;
 }
 
 .menu__header {
@@ -22,6 +25,7 @@
   justify-content: center;
 }
 
+
 .menu__list {
   display: flex;
 }
@@ -30,6 +34,14 @@
   margin-right: 1.5rem;
 }
 
-.menu__list__item__contato {
+.menu__list__item:nth-child(6){
   font-weight: bold;
 }
+
+
+.menu__list__item__contato {
+  font-weight: bold;
+  display: none;
+}
+
+
