--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,7 @@
 :root {
   --cor-de-fundo: #f5f5f5;
   --cor-de-link: #000;
+  --max-width: 1152px;
 }
 
 body {
@@ -35,101 +36,86 @@ a {
   color: var(--cor-de-link);
 }
 
-/* .main__container {
-  width: 1440px;
-  margin: 0px auto;
-} */
+@media (max-width: 910px) {
+  /* Menú */
+  .menu__list {
+    display: none;
+  }
+  .menu__list__item__contato {
+    display: initial;
+  }
+
+  /*Contacto*/
+  .formcontato__img {
+    display: none;
+  }
+}
 
 /*Tablet*/
 @media (max-width: 768px) {
   /* Menú */
-  .menu {
-    width: 90vw;
-    margin: auto;
-    align-items: center;
-    justify-content: space-between;
-  }
-
   .menu__list {
     display: none;
   }
-
-  /*title*/
-  .title {
-    max-width: 90vw;
+  .menu__list__item__contato {
+    display: initial;
   }
 
+  /*title*/
   .title__bio {
     font-size: 1.5rem;
   }
-
   .title__subsection {
     font-size: 1rem;
   }
-
   .title__profile > img {
     max-width: 146px;
     max-height: 146px;
   }
 
   /* About */
-
   .about__title {
     font-size: 1.5rem;
   }
-
-  .about__container {
-    max-width: 90vw;
-  }
-
   .about__paragraph {
     width: 100%;
     font-size: 0.8rem;
   }
 
   /*Skills*/
-  .skills__title {
-    font-size: 1.5rem;
-  }
-
   .skills {
     height: 50vh;
   }
+  .skills__title {
+    font-size: 1.5rem;
+  }
   .skills__box {
-    width: 224px;
+    width: 218px;
     height: 118px;
     margin-right: 0;
-  }
-  .skills__line {
-    justify-content: space-evenly;
   }
 
   /*Hobbies*/
   .hobbies {
     height: 50vh;
   }
-
   .hobbies__title {
     font-size: 1.5rem;
   }
   .hobbies__box {
-    width: 224px;
+    width: 218px;
     height: 118px;
     margin-right: 0;
   }
-  .hobbies__line {
-    justify-content: space-evenly;
-  }
+
   /*Formación Académica*/
   .academic {
     height: 50vh;
   }
-
   .academic__courses__item__img {
     background-color: white;
     padding: 20px 4px;
   }
-
   .academic__courses__item__title {
     font-size: 1rem;
     color: #464646;
@@ -139,24 +125,52 @@ a {
     justify-content: center;
     align-items: center;
   }
-
   .academic__courses__item__img > img {
     width: 60%;
   }
-
   .academic__courses__list {
     padding: 0;
   }
-
-  .academic__courses__box {
-    margin-left: 1rem;
-  }
-
   .academic__title {
     font-size: 1.5rem;
   }
 
   /*Experiencia Profesional*/
+  .experience__title {
+    margin: 10px 0px;
+    margin-bottom: 5px;
+    font-size: 1.4rem;
+  }
+  .experience__text {
+    font-size: 0.9rem;
+  }
+  .experience__box {
+    flex-direction: column;
+  }
+  .experience__img {
+    width: 100%;
+  }
+  .experience__description {
+    display: flex;
+  }
+
+  .experience > div > div:nth-child(3) {
+    flex-direction: column;
+  }
+
+  .experience > div > div:nth-child(5) {
+    flex-direction: column;
+  }
+
+  .experience__info {
+    margin-left: 0;
+    width: 100%;
+  }
+
+  /*Contacto*/
+  .formcontato__form {
+    margin-top: 10px;
+  }
 }
 
 /*Mobile*/
