--- a/styles/formcontato.css
+++ b/styles/formcontato.css
@@ -22,12 +22,14 @@
 
 .formcontato__text {
   margin-left: 30px;
+  max-height: 594px;
   display: flex;
   flex-direction: column;
 }
 
 .formcontato__title {
   margin-top: 0;
+  margin-bottom: 10px;
   color: #464646;
   font-size: 2rem;
 }
