--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,7 @@
 @import url(./menu.css);
 @import url(./skills.css);
 @import url(./title.css);
+@import url(./validacion.css);
 
 /*CSS Reset / Normalize*/
 
@@ -36,6 +37,7 @@ a {
   color: var(--cor-de-link);
 }
 
+
 @media (max-width: 910px) {
   /* Menú */
   .menu__list {
@@ -52,10 +54,8 @@ a {
 
   .formcontato__text {
     margin-left: 0;
-
+  }
 }
-}
-
 /*Tablet*/
 @media (max-width: 768px) {
   /* Menú */
