--- a/styles/about.css
+++ b/styles/about.css
@@ -5,12 +5,15 @@
     background-color: #EAF2FD;
     padding-top: 20px;
     padding-bottom: 20px;
+    background-color: #ffe89c;
+    background-image: linear-gradient(90deg, #ffe89c 0%, #ffa56b 100%);
+    
 }
 
 .about__container{
     margin: auto;
     max-width: var(--max-width);
-    background-color: #EAF2FD;
+    /* background-color: #EAF2FD; */
     padding: 0 30px;
 }
 
