--- a/styles/academic.css
+++ b/styles/academic.css
@@ -1,9 +1,13 @@
 .academic {
-  height: 100vh;
-  background-color: #eaf2fd;
+  /* height: 100vh; */
+  /* background-color: #eaf2fd; */
   margin: auto;
   display: flex;
   align-items: center;
+  background-color: #ffe89c;
+  background-image: linear-gradient(90deg, #ffe89c 0%, #ffa56b 100%);
+  padding-top: 4rem;
+  padding-bottom: 4rem;
 }
 
 .academic__container{
@@ -32,6 +36,7 @@
 .academic__courses__item__img {
   background-color: white;
   padding: 60px 80px;
+  border-radius: 30px;
 }
 
 .academic__courses__item__title{
